crates/gossamer-diagnostics/tests/snapshots/GP0007.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0007]: The right-hand side of `|>` must be a callable: a function - here
--- framed ---
error[GP0007]: The right-hand side of `|>` must be a callable: a function
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
