crates/gossamer-diagnostics/tests/snapshots/GP0009.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0009]: An integer literal is required at this position. — here
--- framed ---
error[GP0009]: An integer literal is required at this position.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
