crates/gossamer-diagnostics/tests/snapshots/GP0011.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0011]: A tuple index must be a plain decimal integer (`p.0`, `p.1`). — here
--- framed ---
error[GP0011]: A tuple index must be a plain decimal integer (`p.0`, `p.1`).
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
