crates/gossamer-diagnostics/tests/snapshots/GP0013.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0013]: An attribute is malformed. Accepted forms are `#[attr]`, - here
--- framed ---
error[GP0013]: An attribute is malformed. Accepted forms are `#[attr]`,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
