crates/gossamer-diagnostics/tests/snapshots/GP0014.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0014]: A `use` declaration could not be parsed. Check the path for — here
--- framed ---
error[GP0014]: A `use` declaration could not be parsed. Check the path for
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
