crates/gossamer-diagnostics/tests/snapshots/GP0015.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0015]: Two consecutive tokens formed something the parser does not — here
--- framed ---
error[GP0015]: Two consecutive tokens formed something the parser does not
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
