crates/gossamer-diagnostics/tests/snapshots/GP0016.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0016]: The `extern` keyword is reserved but has no - here
--- framed ---
error[GP0016]: The `extern` keyword is reserved but has no
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
